--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,7 +6,33 @@ on:
 
 jobs:
   test:
+    env:
+      PIP_CACHE_DIR: /home/runner/.cache/pip
     runs-on: ubuntu-latest
     steps:
-      - name: Check envsubst
-        run: which envsubst
+      - uses: actions/checkout@v4
+      - name: Install Python 3.11
+        uses: actions/setup-python@v5
+        with:
+          python-version: '3.11'
+          cache: 'pip'
+      - name: Install dependencies
+        run: |
+          sudo apt install clamav
+          pip install ruff
+      - name: Scan for Malwares
+        run: |
+          pip install -r requirements.txt -d /tmp/piptest
+          pip install -r requirements-dev.txt -d /tmp/piptest
+          clamscan -r /tmp/piptest
+          ruff check /tmp/piptest
+      - uses: chartboost/ruff-action@v1
+        with:
+            args: 'format --check'
+      - run: pip install -r requirements.txt
+      - run: pip install -r requirements-dev.txt
+      - name: ruff test
+        run: ruff test
+
+      - name: TruffleHog OSS
+        uses: trufflesecurity/trufflehog@main
