--- a/.github/workflows/vuln-scan.yaml
+++ b/.github/workflows/vuln-scan.yaml
@@ -36,7 +36,7 @@ jobs:
             pip install -r requirements.txt -t /tmp/piptest
             pip install -r requirements-dev.txt -t /tmp/piptest
             clamscan -r /tmp/piptest
-            mv ~/.cache/project/piphash.now > ~/.cache/project/piphash
+            mv ~/.cache/project/piphash.now ~/.cache/project/piphash
           }
       - name: TruffleHog OSS
         uses: trufflesecurity/trufflehog@main
