--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,6 @@
-httpx
-pytest
-pytest-cov
+asyncio==3.4.3
+asynctest==0.13.0
+httpx==0.27.0
+pytest==8.1.1
+pytest-asyncio==0.23.6
+pytest-cov==5.0.0
