--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -5,6 +5,7 @@ jobs:
     name: Scan the webapplication
     steps:
       - uses: actions/checkout@v4
+      - uses: extractions/setup-just@v2
       - name: Run image
         run: just run
       - name: ZAP Scan
