--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -21,4 +21,5 @@ jobs:
           docker_name: 'ghcr.io/zaproxy/zaproxy:stable'
           format: openapi
           target: 'http://localhost:5000/'
+          # The '-a' option activates all active scanners. Use this for comprehensive scanning.
           cmd_options: '-a'
