--- a/.github/workflows/zap-scanner.yaml
+++ b/.github/workflows/zap-scanner.yaml
@@ -12,6 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: extractions/setup-just@v2
+      # This step builds the image and runs the web application in the background for the ZAP scan
       - name: Run image
         run: just run-ci
       - name: ZAP Scan
