--- a/conda/env.yaml
+++ b/conda/env.yaml
@@ -1,4 +1,4 @@
-# Conda environmnet for test-actions project
+# Conda environment for test-actions project
 name: test-actions
 channels:
   - conda-forge
