Fix: code issues from quality tools (#10)
* fix: pin package versions

* fix: all the issues in the code quality tools

* Update src/docker_healthcheck.py

Co-authored-by: codacy-production[bot] <61871480+codacy-production[bot]@users.noreply.github.com>

* fix: more fixes

* fix: health check tests

* fix: doc

* fix: small fixes

* fix: more code fixes

* fix: more fixes

* fix: more fixes

* fix: more fixes

* fix: more fixes

* fix: typo

Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

---------

Co-authored-by: codacy-production[bot] <61871480+codacy-production[bot]@users.noreply.github.com>
Co-authored-by: coderabbitai[bot] <136622811+coderabbitai[bot]@users.noreply.github.com>

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,4 +1,4 @@
-name: Test Coverage
+name: Build
 on: [push, pull_request]
 jobs:
   test:
@@ -41,3 +41,8 @@ jobs:
             curl https://deepsource.io/cli | sh
           fi
           ./bin/deepsource report --analyzer test-coverage --key python --value-file ./coverage.xml
+      - name: Codacy Report
+        uses: codacy/codacy-coverage-reporter-action@v1
+        with:
+          project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
+          coverage-reports: ./coverage.xml
