--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,10 +17,6 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
-      - name: Install dependencies
-        run: |
-          pip install -r requirements-dev.txt
-          pip install -r requirements.txt
       - name: Run tests
         run: |
           just test-ci
@@ -46,3 +42,6 @@ jobs:
         with:
           project-token: ${{ secrets.CODACY_PROJECT_TOKEN }}
           coverage-reports: ./coverage.xml
+      - name: Build Docker Image
+        run: |
+          docker build -t test-actions .
