--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -2,6 +2,9 @@ version = 1
 
 [[analyzers]]
 name = "python"
+exclude_patterns = [
+  "packages/**"
+]
 
   [analyzers.meta]
   runtime_version = "3.x.x"
