--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=manoelhc_test-actions
 sonar.organization=manoelhc
 sonar.python.coverage.reportPaths=coverage.xml
+sonar.exclusions=packages/**
