--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,10 +1,10 @@
 version = 1
 
+exclude_patterns = ["packages/**"]
+
 [[analyzers]]
 name = "python"
-exclude_patterns = [
-  "packages/**"
-]
+
 
   [analyzers.meta]
   runtime_version = "3.x.x"
