--- a/.deepsource.toml
+++ b/.deepsource.toml
@@ -1,7 +1,10 @@
 version = 1
 
+exclude_patterns = ["packages/**"]
+
 [[analyzers]]
 name = "python"
+
 
   [analyzers.meta]
   runtime_version = "3.x.x"
