fix: add sourcery suggestion of having at least 1 approval
Co-authored-by: sourcery-ai[bot] <58596630+sourcery-ai[bot]@users.noreply.github.com>

--- a/.mergify.yml
+++ b/.mergify.yml
@@ -4,6 +4,7 @@ pull_request_rules:
       - label=dependencies
       - check-success=Build
       - author=dependabot[bot]
+      - "#approved-reviews-by>=1"
     actions:
       merge:
         method: squash
