fix: quick update

--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -5,6 +5,11 @@ on:
     types: [opened, synchronize, closed]
     branches:
       - main
+      - feat/*
+      - fix/*
+      - hotfix/*
+      - ci/*
+      - chore/*
 env:
     BUMP_PATCH: ^(fix|hotfix|ci)+(\([-A-Z0-9a-z]+\))?:(.*)+$
     BUMP_MINOR: ^(feat|chore)+(\([-A-Z0-9a-z]+\))?:(.*)+$
