fix: change ubuntu version

--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -16,7 +16,7 @@ env:
     BUMP_MAJOR: ^((feat|chore|fix)+(\([-A-Z0-9a-z]+\)?)!|BREAKING CHANGE):(.*)+$
 jobs:
   tag:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
     - name: install Semver
