--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -48,16 +48,19 @@ jobs:
       run: |
         version=v$VERSION
         pr_version=pr${PR_NUMBER}
+        pr_tag_exists=$(git tag -l | grep ${version}-${pr_version})
 
         # If event is closed
         if [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = true ]]; then
           git tag $version
           git push origin $version
           git push --delete origin ${version}-${pr_version}
-        elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]]; then
+        elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n $pr_tag_exists ]]; then
           git push --delete origin ${version}-${pr_version}
         else
-          git push --delete origin ${version}-${pr_version}
+          if [[ -n $pr_tag_exists ]]; then
+            git push --delete origin ${version}-${pr_version}
+          fi
           git tag ${version}-${pr_version} $(git rev-parse --short "$GITHUB_SHA")
           git push origin ${version}-${pr_version}
         fi
