--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           just test-ci
       - name: Upload coverage reports to Codecov
-        if: !github.event.pull_request.draft
+        if: github.event.pull_request.draft == false
         uses: codecov/codecov-action@v4.3.1
         with:
             token: ${{ secrets.CODECOV_TOKEN }}
