--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -52,17 +52,20 @@ jobs:
         pr_version=pr${PR_NUMBER}
         pr_tag_exists=$(git tag -l | grep -F ${version}-${pr_version} || true)
 
-        echo "The project already has the tag $pr_tag_exists"
+        if [[ -n "${pr_tag_exists}" ]]; then
+          echo "The project already has the tag ${pr_tag_exists}"
+        fi
 
         # If event is closed
         if [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = true ]]; then
           git tag $version
           git push origin $version
           git push --delete origin ${version}-${pr_version}
-        elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n $pr_tag_exists ]]; then
+        elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n "${pr_tag_exists}" ]]; then
           git push --delete origin ${version}-${pr_version}
         else
-          if [[ -n $pr_tag_exists ]]; then
+          if [[ -n "${pr_tag_exists}" ]]; then
+            git tag -d ${version}-${pr_version}
             git push --delete origin ${version}-${pr_version}
           fi
           git tag ${version}-${pr_version} $(git rev-parse --short "$GITHUB_SHA")
