--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: install Semver
       run: |
         cargo install semver-cli
