--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -40,8 +40,9 @@ jobs:
        echo "minor=$(eval '[[ "$PR_TITLE" =~ $BUMP_MINOR ]] && semver-cli ${current_version} --increment minor || true')" >> "$GITHUB_OUTPUT"
        echo "major=$(eval '[[ "$PR_TITLE" =~ $BUMP_MAJOR ]] && semver-cli ${current_version} --increment major || true')" >> "$GITHUB_OUTPUT"
 
-    - name: Bump version
-      if: steps.versions.outputs.current_version != '' && github.event.pull_request.number != ''
+    - name: Tag new version
+      id: apply_version
+      if: steps.versions.outputs.current_version != ''
       env:
         VERSION: "${{ steps.versions.outputs.patch }}${{ steps.versions.outputs.minor }}${{ steps.versions.outputs.major }}"
         PR_NUMBER: ${{ github.event.pull_request.number }}
@@ -62,23 +63,49 @@ jobs:
 
         # If event is closed
         if [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = true ]]; then
+          git checkout main
+          git pull
           git tag $version
           git push origin $version
           for tag in ${all_pr_tags}; do
             git push --delete origin $tag
           done
+          old_version=${version}-${pr_version}
+          new_version=${version}
         elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n "${pr_tag_exists}" ]]; then
           git push --delete origin ${version}-${pr_version}
+          old_version=${version}-${pr_version}
         else
           if [[ -n "${pr_tag_exists}" ]]; then
             git tag -d ${version}-${pr_version}
             for tag in ${all_pr_tags}; do
               git push --delete origin $tag
             done
+            old_version=${version}-${pr_version}
           fi
           git tag ${version}-${pr_version} $(git rev-parse --short "$GITHUB_SHA")
+          new_version=${version}-${pr_version}
           git push origin ${version}-${pr_version}
         fi
+
+        echo "new_version=new_version" >> "$GITHUB_OUTPUT"
+        echo "old_version=$old_version" >> "$GITHUB_OUTPUT"
+        echo "new_branch=$(git rev-parse --abbrev-ref HEAD)" >> "$GITHUB_OUTPUT"
+        echo "new_hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+    - uses: mshick/add-pr-comment@v2
+      if: startsWith(steps.apply_version.outputs.old_version, 'v')
+      with:
+        message: |
+          Tag `${{ steps.apply_version.outputs.old_version }}` removed.
+
+    - uses: mshick/add-pr-comment@v2
+      if: startsWith(steps.apply_version.outputs.new_version, 'v')
+      with:
+        message: |
+          Tag `${{ steps.apply_version.outputs.new_version }}`
+          (branch: `${{ steps.apply_version.outputs.new_branch }}`,
+          SHA: `${{ steps.apply_version.outputs.new_hash }}`) Added.
 
     - name: Create Release
       if: github.event.pull_request.merged == true
