fix: wrong logic

--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -45,7 +45,11 @@ jobs:
        echo "minor=${minor}" >> "$GITHUB_OUTPUT"
        echo "major=${major}" >> "$GITHUB_OUTPUT"
 
-       echo "next_version=${patch}.${minor}.${major}" >> "$GITHUB_OUTPUT"
+       if [[ -n ${patch} ]] && next_version=${patch}
+       if [[ -n ${minor} ]] && next_version=${minor}
+       if [[ -n ${major} ]] && next_version=${major}
+
+       echo "next_version=${next_version}" >> "$GITHUB_OUTPUT"
 
     - uses: mshick/add-pr-comment@v2
       if: steps.versions.outputs.next_version == 0
