--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -45,9 +45,7 @@ jobs:
        echo "minor=${minor}" >> "$GITHUB_OUTPUT"
        echo "major=${major}" >> "$GITHUB_OUTPUT"
 
-       [[ -n ${patch} ]] && next_version=${patch}
-       [[ -n ${minor} ]] && next_version=${minor}
-       [[ -n ${major} ]] && next_version=${major}
+       next_version=${major:-${minor:-${patch}}}
 
        echo "next_version=${next_version}" >> "$GITHUB_OUTPUT"
 
@@ -105,8 +103,8 @@ jobs:
           git push origin ${version}-${pr_version}
         fi
 
-        echo "new_version=new_version" >> "$GITHUB_OUTPUT"
-        echo "old_version=$old_version" >> "$GITHUB_OUTPUT"
+        echo "new_version=${new_version}" >> "$GITHUB_OUTPUT"
+        echo "old_version=${old_version}" >> "$GITHUB_OUTPUT"
         echo "new_branch=$(git rev-parse --abbrev-ref HEAD)" >> "$GITHUB_OUTPUT"
         echo "new_hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
 
