--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -82,21 +82,23 @@ jobs:
           git pull
           git tag $version
           git push origin $version
+          new_version=${version}
           for tag in ${all_pr_tags}; do
             git push --delete origin $tag
+            old_version=$tag
           done
-          old_version=${version}-${pr_version}
-          new_version=${version}
         elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n "${pr_tag_exists}" ]]; then
-          git push --delete origin ${version}-${pr_version}
-          old_version=${version}-${pr_version}
+          for tag in ${all_pr_tags}; do
+            git push --delete origin $tag
+            old_version=$tag
+          done
         else
           if [[ -n "${pr_tag_exists}" ]]; then
             git tag -d ${version}-${pr_version}
             for tag in ${all_pr_tags}; do
               git push --delete origin $tag
+              old_version=$tag
             done
-            old_version=${version}-${pr_version}
           fi
           git tag ${version}-${pr_version} $(git rev-parse --short "$GITHUB_SHA")
           new_version=${version}-${pr_version}
@@ -118,9 +120,7 @@ jobs:
       if: startsWith(steps.apply_version.outputs.new_version, 'v')
       with:
         message: |
-          Tag `${{ steps.apply_version.outputs.new_version }}`
-          (branch: `${{ steps.apply_version.outputs.new_branch }}`,
-          SHA: `${{ steps.apply_version.outputs.new_hash }}`) Added.
+          Tag `${{ steps.apply_version.outputs.new_version }}` (branch: `${{ steps.apply_version.outputs.new_branch }}`, SHA: `${{ steps.apply_version.outputs.new_hash }}`) Added.
 
     - name: Create Release
       if: github.event.pull_request.merged == true
@@ -129,4 +129,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         generate_release_notes: true
-        tag_name: "v${{ steps.versions.outputs.patch }}${{ steps.versions.outputs.minor }}${{ steps.versions.outputs.major }}"
+        tag_name: "v${{ steps.apply_version.outputs.new_version }}"
