--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -28,14 +28,14 @@ jobs:
         cargo install semver-cli
     - name: Get changes attributes
       id: versions
+      env:
+        PR_TITLE: "${{ github.event.pull_request.title }}"
       run: |
        current_version=$(git describe --tags $(git rev-list --tags='v[0-9]+.[0-9]+.[0-9]+' --max-count=1 || true)|cut -dv -f2)
        if [[ -z $current_version  ]]; then
          current_version=0.0.0
        fi
        echo "current_version=$current_version" >> "$GITHUB_OUTPUT"
-
-       PR_TITLE="${{ github.event.pull_request.title }}"
 
        patch=$(eval '[[ "$PR_TITLE" =~ $BUMP_PATCH ]] && semver-cli ${current_version} --increment patch || true')
        minor=$(eval '[[ "$PR_TITLE" =~ $BUMP_MINOR ]] && semver-cli ${current_version} --increment minor || true')
