--- a/.github/workflows/draft-pr-test.yaml
+++ b/.github/workflows/draft-pr-test.yaml
@@ -52,7 +52,7 @@ jobs:
         barecheck-github-app-token: ${{ secrets.BARECHECK_GITHUB_APP_TOKEN }}
         lcov-file: "./coverage.lcov"
         base-lcov-file: "./coverage-ref.lcov"
-        minimum-ratio: 0 # Fails Github action once code coverage is decreasing
+minimum-ratio: 50
         send-summary-comment: true
         show-annotations: "warning" # Possible options warning|error
         github-token: ${{ secrets.GITHUB_TOKEN }}
