fix: setup just

--- a/.github/workflows/draft-pr-test.yaml
+++ b/.github/workflows/draft-pr-test.yaml
@@ -16,6 +16,7 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
+      - uses: extractions/setup-just@v2
       - name: Run tests
         run: |
           just test-ci
@@ -41,6 +42,7 @@ jobs:
       with:
           python-version: '3.12'
           cache: 'pip'
+    - uses: extractions/setup-just@v2
     - name: Run tests
       run: |
               just test-ci
