--- a/.github/workflows/draft-pr-test.yaml
+++ b/.github/workflows/draft-pr-test.yaml
@@ -37,6 +37,7 @@ jobs:
       with:
         name: coverage-ref.lcov
 
+    - run: ls -la
     - name: Install Python 3.12
       uses: actions/setup-python@v5
       with:
