fix: Add permissions to write in the PR

--- a/.github/workflows/draft-pr-test.yaml
+++ b/.github/workflows/draft-pr-test.yaml
@@ -29,6 +29,7 @@ jobs:
 
   checks:
     runs-on: ubuntu-latest
+    permissions: write-all
     needs: base_branch_cov
     steps:
     - uses: actions/checkout@v3
