--- a/.github/workflows/auto-tagging.yaml
+++ b/.github/workflows/auto-tagging.yaml
@@ -10,6 +10,7 @@ on:
       - hotfix/*
       - ci/*
       - chore/*
+      - release/*
 env:
     BUMP_PATCH: ^(fix|hotfix|ci)+(\([-A-Z0-9a-z]+\))?:(.*)+$
     BUMP_MINOR: ^(feat|chore)+(\([-A-Z0-9a-z]+\))?:(.*)+$
@@ -27,6 +28,8 @@ jobs:
         cargo install semver-cli
     - name: Get changes attributes
       id: versions
+      env:
+        PR_TITLE: "${{ github.event.pull_request.title }}"
       run: |
        current_version=$(git describe --tags $(git rev-list --tags='v[0-9]+.[0-9]+.[0-9]+' --max-count=1 || true)|cut -dv -f2)
        if [[ -z $current_version  ]]; then
@@ -34,15 +37,29 @@ jobs:
        fi
        echo "current_version=$current_version" >> "$GITHUB_OUTPUT"
 
-       PR_TITLE="${{ github.event.pull_request.title }}"
-       echo "patch=$(eval '[[ "$PR_TITLE" =~ $BUMP_PATCH ]] && semver-cli ${current_version} --increment patch || true')" >> "$GITHUB_OUTPUT"
-       echo "minor=$(eval '[[ "$PR_TITLE" =~ $BUMP_MINOR ]] && semver-cli ${current_version} --increment minor || true')" >> "$GITHUB_OUTPUT"
-       echo "major=$(eval '[[ "$PR_TITLE" =~ $BUMP_MAJOR ]] && semver-cli ${current_version} --increment major || true')" >> "$GITHUB_OUTPUT"
+       patch=$(eval '[[ "$PR_TITLE" =~ $BUMP_PATCH ]] && semver-cli ${current_version} --increment patch || true')
+       minor=$(eval '[[ "$PR_TITLE" =~ $BUMP_MINOR ]] && semver-cli ${current_version} --increment minor || true')
+       major=$(eval '[[ "$PR_TITLE" =~ $BUMP_MAJOR ]] && semver-cli ${current_version} --increment major || true')
 
-    - name: Bump version
-      if: steps.versions.outputs.current_version != ''
+       echo "patch=${patch}" >> "$GITHUB_OUTPUT"
+       echo "minor=${minor}" >> "$GITHUB_OUTPUT"
+       echo "major=${major}" >> "$GITHUB_OUTPUT"
+
+       next_version=${major:-${minor:-${patch}}}
+
+       echo "next_version=${next_version}" >> "$GITHUB_OUTPUT"
+
+    - uses: mshick/add-pr-comment@v2
+      if: steps.versions.outputs.next_version == 0
+      with:
+         message: |
+           No tag was generated due to PR title not compatible with Conventional Commits.
+
+    - name: Tag new version
+      id: apply_version
+      if: steps.versions.outputs.current_version != 0 || steps.versions.outputs.next_version == 0
       env:
-        VERSION: "${{ steps.versions.outputs.patch }}${{ steps.versions.outputs.minor }}${{ steps.versions.outputs.major }}"
+        VERSION: "${{ steps.versions.outputs.next_version }}"
         PR_NUMBER: ${{ github.event.pull_request.number }}
         PR_MERGED: ${{ github.event.pull_request.merged }}
         PR_ACTION: ${{ github.event.action }}
@@ -53,6 +70,7 @@ jobs:
         version=v${VERSION}
         pr_version=pr${PR_NUMBER}
         pr_tag_exists=$(git tag -l | grep -F ${version}-${pr_version} || true)
+        all_pr_tags=$(git tag -l | egrep ${pr_version}\$ || true)
 
         if [[ -n "${pr_tag_exists}" ]]; then
           echo "The project already has the tag ${pr_tag_exists}"
@@ -60,19 +78,49 @@ jobs:
 
         # If event is closed
         if [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = true ]]; then
+          git checkout main
+          git pull
           git tag $version
           git push origin $version
-          git push --delete origin ${version}-${pr_version}
+          new_version=${version}
+          for tag in ${all_pr_tags}; do
+            git push --delete origin $tag
+            old_version=$tag
+          done
         elif [[ $PR_ACTION = "closed" ]] && [[ $PR_MERGED = false ]] && [[ -n "${pr_tag_exists}" ]]; then
-          git push --delete origin ${version}-${pr_version}
+          for tag in ${all_pr_tags}; do
+            git push --delete origin $tag
+            old_version=$tag
+          done
         else
           if [[ -n "${pr_tag_exists}" ]]; then
             git tag -d ${version}-${pr_version}
-            git push --delete origin ${version}-${pr_version}
+            for tag in ${all_pr_tags}; do
+              git push --delete origin $tag
+              old_version=$tag
+            done
           fi
           git tag ${version}-${pr_version} $(git rev-parse --short "$GITHUB_SHA")
+          new_version=${version}-${pr_version}
           git push origin ${version}-${pr_version}
         fi
+
+        echo "new_version=${new_version}" >> "$GITHUB_OUTPUT"
+        echo "old_version=${old_version}" >> "$GITHUB_OUTPUT"
+        echo "new_branch=$(git rev-parse --abbrev-ref HEAD)" >> "$GITHUB_OUTPUT"
+        echo "new_hash=$(git rev-parse --short HEAD)" >> "$GITHUB_OUTPUT"
+
+    - uses: mshick/add-pr-comment@v2
+      if: startsWith(steps.apply_version.outputs.old_version, 'v')
+      with:
+        message: |
+          Tag `${{ steps.apply_version.outputs.old_version }}` removed.
+
+    - uses: mshick/add-pr-comment@v2
+      if: startsWith(steps.apply_version.outputs.new_version, 'v')
+      with:
+        message: |
+          Tag `${{ steps.apply_version.outputs.new_version }}` (branch: `${{ steps.apply_version.outputs.new_branch }}`, SHA: `${{ steps.apply_version.outputs.new_hash }}`) Added.
 
     - name: Create Release
       if: github.event.pull_request.merged == true
@@ -81,4 +129,4 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         generate_release_notes: true
-        tag_name: "v${{ steps.versions.outputs.patch }}${{ steps.versions.outputs.minor }}${{ steps.versions.outputs.major }}"
+        tag_name: "${{ steps.apply_version.outputs.new_version }}"
