feat(test): Add support to HTTPS via Nginx

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -5,7 +5,7 @@ repos:
     - id: trufflehog
       name: TruffleHog
       description: Detect secrets in your data.
-      entry: bash -c 'docker run -v "$(pwd):/workdir" --rm us-docker.pkg.dev/thog-artifacts/public/scanner:latest git main HEAD /workdir'
+      entry: bash -c 'docker run -v "$(pwd):/workdir" --rm trufflesecurity/trufflehog:latest git file:///workdir --exclude_paths /workdir/.trufflehogignore'
       language: system
       stages: ["commit", "push"]
 # This one is to check if the commit message follows the conventional commit standard. https://www.conventionalcommits.org/en/v1.0.0/
@@ -55,10 +55,10 @@ repos:
     -   id: trivyfs-docker
         args:
           - --skip-dirs
-          - ./tests
+          - ./tests,./confs
           - .
     -   id: trivyconfig-docker
         args:
           - --skip-dirs
-          - ./tests
+          - ./tests,./confs
           - .
